--- a/MeetingRoom/appsettings.json
+++ b/MeetingRoom/appsettings.json
@@ -1,8 +1,10 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(local)\\SQLEXPRESS;Database=Exam-MeetingRoom;User ID=sa;Password=12xl34;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
