--- a/MeetingRoom.IntegrationTests/MeetingRoom.IntegrationTests.csproj
+++ b/MeetingRoom.IntegrationTests/MeetingRoom.IntegrationTests.csproj
@@ -28,4 +28,10 @@
     <ProjectReference Include="..\MeetingRoom\MeetingRoom.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
